--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "mern",
+  "name": "nytsearch",
   "version": "1.0.0",
-  "description": "Mern Demo",
+  "description": "Gets headlines from NYT API. Users can save articles.",
   "main": "server.js",
   "scripts": {
     "server": "node server.js",
     "client": "cd client && npm run start",
-    "start": "./node_modules/.bin/concurrently \"./node_modules/.bin/nodemon\" \"npm run client\"",
-    "build": "cd client && npm run build",
+    "start": "concurrently \"nodemon server.js\" \"npm run client\"",
+    "build": "node scripts/build.js",
     "deploy": "yarn build && git add . && git commit -m \"Building for production\" && git push heroku master",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +18,10 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "express": "^4.15.4"
+    "axios": "^0.16.2",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.4",
+    "mongoose": "^4.11.13",
+    "react-router-dom": "^4.1.2"
   }
 }
